# reorient-facets

./: CMakeLists.txt  readme.md  setup.py
src/: exe.cpp  module.cpp  reorient_facets.h
